compressed image and align fix

--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ section{
 .text-center{
     text-align: center;
 }
+.text-left{
+    text-align: left;
+}
+.text-right{
+    text-align: right;
+}
 .w-50 img{
     width: 75%;
     
